parser/src/snapshots/squawk_parser__parse__tests__vacuum_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt(
            RawStmt {
                stmt: VacuumStmt(
                    Object({
                        "is_vacuumcmd": Bool(
                            true,
                        ),
                        "options": Array([
                            Object({
                                "DefElem": Object({
                                    "defaction": String(
                                        "DEFELEM_UNSPEC",
                                    ),
                                    "defname": String(
                                        "verbose",
                                    ),
                                    "location": Number(
                                        9,
                                    ),
                                }),
                            }),
                            Object({
                                "DefElem": Object({
                                    "defaction": String(
                                        "DEFELEM_UNSPEC",
                                    ),
                                    "defname": String(
                                        "analyze",
                                    ),
                                    "location": Number(
                                        18,
                                    ),
                                }),
                            }),
                        ]),
                        "rels": Array([
                            Object({
                                "VacuumRelation": Object({
                                    "relation": Object({
                                        "inh": Bool(
                                            true,
                                        ),
                                        "location": Number(
                                            27,
                                        ),
                                        "relname": String(
                                            "foo",
                                        ),
                                        "relpersistence": String(
                                            "p",
                                        ),
                                    }),
                                }),
                            }),
                        ]),
                    }),
                ),
                stmt_location: 0,
                stmt_len: Some(
                    30,
                ),
            },
        ),
    ],
)
